--- a/react-vite/src/components/SpotDetailView/SpotDetailView.css
+++ b/react-vite/src/components/SpotDetailView/SpotDetailView.css
@@ -79,11 +79,11 @@
     width: 100%;
 }
 
-.ccomments-container {
+.comments-container {
     width: 45%;
 }
 
-.comments-container {
+.map-container {
     width: 55%;
 }
 
